// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     expense
    expenses
     totalling 
    $123,047,230.01
  </h1>
</div>
`;

exports[`should render Expense Summary with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     expense
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render Expense Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
